--- a/packages/styles/scss/internal/content-group/_content-group.scss
+++ b/packages/styles/scss/internal/content-group/_content-group.scss
@@ -23,7 +23,6 @@
   .#{$prefix}--content-group {
     display: block;
     margin-top: $carbon--layout-05;
-    margin-bottom: $carbon--layout-05;
 
     .#{$prefix}--card__CTA {
       // TO DO: aspect ratio 2x1
